<resources>
    <string name="app_name">풍선타고</string>

    <!-- Common -->
    <string name="format_diff_year">%d년 전</string>
    <string name="format_diff_month">%d개월 전</string>
    <string name="format_diff_day">%d일 전</string>
    <string name="format_diff_hour">%d시간 전</string>
    <string name="format_diff_minute">%d분 전</string>
    <string name="format_diff_second">%d초 전</string>

    <!-- Main -->
    <string name="label_home">메인</string>
    <string name="label_search">검색</string>
    <string name="label_my_page">내정보</string>
    <string name="description_main_logo_image">메인 로고 이미지</string>

    <!-- Home -->
    <string name="home_title1_channel">여행 채널 추천</string>
    <string name="home_title2_best10_1">해외 여행지 </string>
    <string name="home_title2_best10_2">BEST 10</string>
    <string name="home_title3_popular">지금 인기 많은 여행 유튜브</string>

    <string name="home_channel_list_subscribers">구독자 %s명</string>

    <string name="format_view_count">&#160;· 조회수 %s회 ·&#160;</string>
    <string name="format_view_count_thousand">&#160;· 조회수 %s천회 ·&#160;</string>
    <string name="format_view_count_million">&#160;· 조회수 %s만회 ·&#160;</string>
    <string name="format_view_count_billion">&#160;· 조회수 %s억회 ·&#160;</string>

    <!-- Search -->
    <string-array name="spinner_items_continent">
        <item>아시아</item>
        <item>유럽</item>
        <item>아프리카</item>
        <item>아메리카</item>
        <item>오세아니아</item>
    </string-array>

    <string-array name="spinner_items_country">
        <item>일본</item>
        <item>중국</item>
        <item>베트남</item>
        <item>말레아시아</item>
        <item>인도네시아</item>
        <item>대만</item>
        <item>홍콩</item>
        <item>태국</item>
        <item>튀르키예</item>
        <item>프랑스</item>
        <item>오스트리아</item>
        <item>영국</item>
        <item>이탈리아</item>
        <item>독일</item>
        <item>그리스</item>
        <item>스위스</item>
        <item>덴마크</item>
        <item>노르웨이</item>
        <item>벨기에</item>
        <item>스페인</item>
        <item>포르투갈</item>
        <item>미국</item>
        <item>캐나다</item>
        <item>브라질</item>
        <item>아르헨티나</item>
        <item>이집트</item>
        <item>호주</item>
        <item>괌</item>
        <item>마닐라</item>
        <item>싱가포르</item>
    </string-array>
    <!-- My Page -->
    <string name="description_my_background_image">내 배경 이미지</string>
    <string name="description_my_profile_image">내 프로필 이미지</string>
    <string name="text_my_name">공명선</string>
    <string name="text_my_description">지나가버린 (지나가버린) 어린 시절엔 (시절엔)\n풍선을 타고 날아가는 예쁜 꿈도 꾸었지\n빨간 풍선이 하늘을 날면 내 마음에도 아름다운 기억들이 생각나</string>
    <string name="label_my_favorite_travel_spots">내가 찜한 여행지</string>
    <string name="guide_message_empty_favorite_travel_spots">찜한 여행지가 없습니다.</string>
    <string name="label_my_favorite_videos">내가 좋아하는 영상</string>
    <string name="description_youtube_video_thumbnail">유튜브 비디오 썸네일 이미지</string>
    <string name="guide_message_empty_favorite_videos">좋아요 누른 영상이 없습니다.</string>
    <string name="description_favorite_travel_spot_thumbnail">좋아요한 여행지 썸네일 이미지</string>
    <string name="label_select_all">전체선택</string>
    <string name="label_select_delete">선택삭제 |</string>
    <string name="label_edit">&#160;편집</string>
    <string name="label_edit_complete">&#160;편집완료</string>

    <!-- Travel Spot Detail -->
    <string name="description_back_image">뒤로 가기 이미지</string>
    <string name="travel_nation">국가</string>
    <string name="travel_city">도시</string>
    <string name="travel_description">이것은 여행지 설명입니다. 이것은 여행지 설명입니다. 이것은 여행지 설명입니다. 이것은 여행지 설명입니다. 이것은 여행지 설명입니다.</string>
    <string name="travel_video_list_title">여행지 간접 여행하기</string>
    <string name="travel_video_list_item_title">영상 제목 영상 제목 영상 제목 영상 제목 영상 제목 영상 제목 영상 제목 영상 제목 영상 제목 영상 제목 영상 제목 영상 제목</string>
    <string name="travel_video_list_item_uploader">영상 업로더 영상 업로더 영상 업로더 영상 업로더 영상 업로더 영상 업로더 영상 업로더 영상 업로더 영상 업로더 영상 업로더 영상 업로더 영상 업로더 영상 업로더 영상 업로더 영상 업로더 </string>
    <string name="travel_video_list_item_view_count">23시간 전</string>

    <string name="travel_chip_all">#전체</string>
    <string name="travel_chip_train">#기차여행</string>
    <string name="travel_chip_restaurant">#맛집여행</string>
    <string name="travel_chip_backpacking">#배낭여행</string>
    <string name="travel_chip_honeymoon">#신혼여행</string>
    <string name="travel_chip_healing">#힐링여행</string>

    <string-array name="travel_chips">
        <item>전체</item>
        <item>기차여행</item>
        <item>맛집여행</item>
        <item>배낭여행</item>
        <item>신혼여행</item>
        <item>힐링여행</item>
    </string-array>

    <string name="travel_empty">오류 발생!</string>

    <!-- Video Detail -->
    <!-- &amp; 쓰면 "&" 이 글자를 쓸 수 있네요.-->
    <!-- \u00A0 이건 공백 관련 입니다.-->
    <string name="detail_page_main_title">한국식 오징어 낚싯배를 탄 우즈벡 형님들 - 어몽&amp;오리뽀(6)</string>
    <string name="detail_page_sub_title">곽튜브 · 조회수 137만회   2024.08.16</string>
    <string name="detail_page_text">*이번 영상은 LG전자 스탠바이미 Go의 유료광고를 포함하고 있습니다\n
        \n안녕하세요\n제주도의 마지막 여행 영상입니다
        \n마침 이렇게 LG에서 감사하게도 형님들에게 빠야렉에서 TV대신 쓰면 좋을 것 같다고 제품을 보내주셔서 광고를 하게 되었습니다.
        \n이번에 글램핑을 하면서 스탠바이미 GO를 사용했는데 참 유용했습니다\n두 형님들도 맘에 들어 하셔서 기분이 좋습니다\n
        \n그럼 다음편은 마지막 어몽&amp;오리뽀편으로 찾아 뵙겠습니다\n
        \n#LG전자 #스탠바이미 #스탠바이미러버
        \n-------------------------------------------------------------------------------
        \ninsta : @jbkwak
        \nmail : wnsqls3@gmail.com
        \n촬영장비 : 고프로 히어로 12 블랙
        \n편집 : 맥북프로 16인치, 파이널컷 X
        \n음원 : Epidemic sound&amp;Artlist\n\n\n
        \n *이번 영상은 LG전자 스탠바이미 Go의 유료광고를 포함하고 있습니다\n
        \n안녕하세요\n제주도의 마지막 여행 영상입니다
        \n마침 이렇게 LG에서 감사하게도 형님들에게 빠야렉에서 TV대신 쓰면 좋을 것 같다고 제품을 보내주셔서 광고를 하게 되었습니다.
        \n이번에 글램핑을 하면서 스탠바이미 GO를 사용했는데 참 유용했습니다\n두 형님들도 맘에 들어 하셔서 기분이 좋습니다\n
        \n그럼 다음편은 마지막 어몽&amp;오리뽀편으로 찾아 뵙겠습니다\n
        \n#LG전자 #스탠바이미 #스탠바이미러버
        \n-------------------------------------------------------------------------------
        \ninsta : @jbkwak
        \nmail : wnsqls3@gmail.com
        \n촬영장비 : 고프로 히어로 12 블랙
        \n편집 : 맥북프로 16인치, 파이널컷 X
        \n음원 : Epidemic sound&amp;Artlist</string>
<!--    <string name="share_button">공유하기</string>-->
    <string name="video_detail_subtitle">%1$s · 조회수 %2$s회\u00A0\u00A0\u00A0%3$s</string>

</resources>