<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_travel_video_list_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/travel_video_list_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="16dp"
        />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/cg_travel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_travel_video_list_title"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        app:chipSpacingHorizontal="8dp"
        app:chipSpacingVertical="-8dp"
        >

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_travel_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/travel_chip_all"
            android:backgroundTint="@color/sel_travel_chip_color"
            />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_travel_train"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/travel_chip_train"
            android:backgroundTint="@color/sel_travel_chip_color"
            />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_travel_restaurant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/travel_chip_restaurant"
            android:backgroundTint="@color/sel_travel_chip_color"
            />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_travel_backpacking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/travel_chip_backpacking"
            android:backgroundTint="@color/sel_travel_chip_color"
            />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_travel_honeymoon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/travel_chip_honeymoon"
            android:backgroundTint="@color/sel_travel_chip_color"
            />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_travel_healing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/travel_chip_healing"
            android:backgroundTint="@color/sel_travel_chip_color"
            />

    </com.google.android.material.chip.ChipGroup>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_travel_video_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/cg_travel"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>