<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_travel_nation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/travel_nation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="16sp"
        android:layout_margin="16dp"
        />

    <TextView
        android:id="@+id/tv_travel_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/travel_city"
        app:layout_constraintStart_toStartOf="@id/tv_travel_nation"
        app:layout_constraintTop_toBottomOf="@id/tv_travel_nation"
        android:textStyle="bold"
        android:textSize="24sp"
        />

    <TextView
        android:id="@+id/tv_travel_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/travel_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_travel_city"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        android:paddingHorizontal="16dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>