<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_my_background"
                android:layout_width="0dp"
                android:layout_height="267dp"
                android:contentDescription="@string/description_my_background_image"
                android:scaleType="centerCrop"
                android:src="@drawable/img_user_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/gradient_overlay"
                app:layout_constraintBottom_toBottomOf="@id/iv_my_background"
                app:layout_constraintEnd_toEndOf="@id/iv_my_background"
                app:layout_constraintStart_toStartOf="@id/iv_my_background"
                app:layout_constraintTop_toTopOf="@id/iv_my_background" />

            <ImageView
                android:id="@+id/iv_my_profile_image"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginTop="192dp"
                android:background="@drawable/bg_profile_image"
                android:clipToOutline="true"
                android:contentDescription="@string/description_my_profile_image"
                android:scaleType="centerCrop"
                android:src="@drawable/img_user_profile"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/iv_my_background" />

            <TextView
                android:id="@+id/tv_my_name"
                style="@style/TextTitle.S20"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/text_my_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_my_profile_image" />

            <TextView
                android:id="@+id/tv_my_description"
                style="@style/TextTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="12dp"
                android:gravity="center"
                android:text="@string/text_my_description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_my_name" />

            <TextView
                android:id="@+id/tv_label_my_favorite_videos"
                style="@style/TextBody.S18"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/label_my_favorite_videos"
                app:layout_constraintEnd_toStartOf="@id/tv_label_favorite_videos_edit"
                app:layout_constraintStart_toStartOf="@id/tv_my_description"
                app:layout_constraintTop_toBottomOf="@id/tv_my_description" />

            <TextView
                android:id="@+id/tv_label_favorite_videos_edit"
                style="@style/TextBody.S16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_edit"
                android:textColor="@color/main"
                app:layout_constraintBottom_toBottomOf="@id/tv_label_my_favorite_videos"
                app:layout_constraintEnd_toEndOf="@id/tv_my_description"
                app:layout_constraintStart_toEndOf="@id/tv_label_my_favorite_videos"
                app:layout_constraintTop_toTopOf="@id/tv_label_my_favorite_videos" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_favorite_videos"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:nestedScrollingEnabled="false"
                android:paddingHorizontal="2dp"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_label_my_favorite_videos"
                app:spanCount="2"
                tools:itemCount="6"
                tools:listitem="@layout/item_grid_video" />

            <TextView
                android:id="@+id/tv_empty_favorite_videos"
                style="@style/TextCaption"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:gravity="center"
                android:text="@string/guide_message_empty_favorite_videos"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_label_my_favorite_videos"
                tools:visibility="visible" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>