<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/sv_travel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/vp_travel_info"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.tbuonomo.viewpagerdotsindicator.WormDotsIndicator
                android:id="@+id/vpdi_travel_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                app:dotsColor="@color/white"
                app:dotsSize="10dp"
                app:layout_constraintBottom_toBottomOf="@id/vp_travel_info"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:selectedDotColor="@color/black" />

            <TextView
                android:id="@+id/tv_travel_nation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/travel_nation"
                android:textColor="@color/grey_shade_60"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/vp_travel_info" />

            <TextView
                android:id="@+id/tv_travel_city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/travel_city"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/tv_travel_nation"
                app:layout_constraintTop_toBottomOf="@id/tv_travel_nation" />

            <TextView
                android:id="@+id/tv_travel_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingHorizontal="16dp"
                android:text="@string/travel_description"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_travel_city" />

            <TextView
                android:id="@+id/tv_travel_chipgroup_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/travel_video_list_title"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_travel_description" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/cg_travel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                app:checkedChip="@id/chip_travel_all"
                app:chipSpacingHorizontal="8dp"
                app:chipSpacingVertical="-8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_travel_chipgroup_title"
                app:selectionRequired="true"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_travel_all"
                    style="@style/Widget.Material3.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:text="@string/travel_chip_all"
                    app:checkedIconEnabled="false"
                    app:chipBackgroundColor="@color/sel_travel_chip_color" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_travel_train"
                    style="@style/Widget.Material3.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:text="@string/travel_chip_train"
                    app:checkedIconEnabled="false"
                    app:chipBackgroundColor="@color/sel_travel_chip_color" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_travel_restaurant"
                    style="@style/Widget.Material3.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:text="@string/travel_chip_restaurant"
                    app:checkedIconEnabled="false"
                    app:chipBackgroundColor="@color/sel_travel_chip_color" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_travel_backpacking"
                    style="@style/Widget.Material3.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:text="@string/travel_chip_backpacking"
                    app:checkedIconEnabled="false"
                    app:chipBackgroundColor="@color/sel_travel_chip_color" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_travel_honeymoon"
                    style="@style/Widget.Material3.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:text="@string/travel_chip_honeymoon"
                    app:checkedIconEnabled="false"
                    app:chipBackgroundColor="@color/sel_travel_chip_color" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_travel_healing"
                    style="@style/Widget.Material3.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:text="@string/travel_chip_healing"
                    app:checkedIconEnabled="false"
                    app:chipBackgroundColor="@color/sel_travel_chip_color" />

            </com.google.android.material.chip.ChipGroup>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_travel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:nestedScrollingEnabled="true"
                app:layout_constraintTop_toBottomOf="@id/cg_travel" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <ProgressBar
        android:id="@+id/progress_travel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="invisible"
        />

</androidx.constraintlayout.widget.ConstraintLayout>

    <!--<androidx.recyclerview.widget.RecyclerView-->
    <!--android:id="@+id/rv_travel"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--    />-->

    <!--<?xml version="1.0" encoding="utf-8"?>-->
    <!--<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--    android:layout_width="match_parent"-->
    <!--    android:layout_height="match_parent"-->
    <!--    xmlns:app="http://schemas.android.com/apk/res-auto">-->

    <!--    <androidx.recyclerview.widget.RecyclerView-->
    <!--        android:id="@+id/rv_travel"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="match_parent"-->
    <!--        />-->

    <!--</androidx.constraintlayout.widget.ConstraintLayout>-->