<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_back_bar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/iv_back_bar_image"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/arrow" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:id="@+id/sl_detail_page"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cl_back_bar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_detail_page_thumbnail"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:scaleType="centerCrop"
                android:src="@mipmap/ic_launcher"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/tv_detail_page_main_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingHorizontal="10dp"
                android:text="@string/detail_page_main_title"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/iv_detail_page_thumbnail"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/tv_detail_page_sub_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:text="@string/detail_page_sub_title"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@id/tv_detail_page_main_title"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/tv_detail_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:paddingHorizontal="10dp"
                android:text="@string/detail_page_text"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/tv_detail_page_sub_title" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/btn_share_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:text="@string/share_button"
            android:textStyle="bold" />

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>